init kafka
